--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Paul Kowalsy</a></h3>
+                <h3><a href="#">Bhaskar Pal</a></h3>
                 <p>Lead Designer, TNW</p>
               </div>
             </div>
@@ -558,7 +558,7 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Jhon Doe</a></h3>
+                <h3><a href="#">Bhaskar Pal</a></h3>
                 <p>Back-end Developer, ASUS</p>
               </div>
             </div>
@@ -581,7 +581,7 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Daryl Dixon</a></h3>
+                <h3><a href="#">Bhaskar Pal</a></h3>
                 <p>Full-stack Developer, Google</p>
               </div>
             </div>
@@ -604,7 +604,7 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Chris Adams</a></h3>
+                <h3><a href="#">Bhaskar Pal</a></h3>
                 <p>UI Designer, Apple</p>
               </div>
             </div>
@@ -837,8 +837,8 @@
         <div class="row">
           <div class="col-12">
             <div class="section-title-header text-center">
-              <h1 class="section-title wow fadeInUp" data-wow-delay="0.2s">Sponsores</h1>
-              <p class="wow fadeInDown" data-wow-delay="0.2s">Global Grand Event on Digital Design</p>
+              <h1 class="section-title wow fadeInUp" data-wow-delay="0.2s">Sponsors</h1>
+              <p class="wow fadeInDown" data-wow-delay="0.2s">Thanks to all of our sponsors.</p>
             </div>
           </div>
         </div>
