--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
             <a class="page-scrool" href="#about">About</a>
           </li>
           <li>
-             <a class="page-scroll" href="#schedules">schedules</a>
+             <a class="page-scroll" href="#schedules">Schedules</a>
           </li>
           <li>
-            <a class="page-scroll" href="#team">Speakers</a>
+            <a class="page-scroll" href="#team">Team</a>
           </li>
           <li>
             <a class="page-scroll" href="#gallery">Gallery</a>
@@ -417,7 +417,7 @@
           </div>
           <div class="schedule-tab-content col-md-9 col-lg-9 col-xs-12 clearfix">
             <div class="tab-content" id="myTabContent">
-              <div class="tab-pane fade show active" id="monday" role="tabpanel" aria-labelledby="monday-tab">
+              <div class="tab-pane fade show active" id="thursday" role="tabpanel" aria-labelledby="thursday-tab">
                 <div id="accordion">
                   <div class="card">
                     <div id="headingOne">
@@ -465,7 +465,7 @@
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="0.2s">
               <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/team.png" alt="" style="height: 450px"; object-fit: cover;>
+                <img class="img-fluid-team" src="assets/img/team/1.jpeg" alt="" style="height: 450px"; object-fit: cover;>
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
@@ -488,7 +488,7 @@
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="0.4s">
               <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/team.png" alt="" style="height: 450px"; object-fit: cover;>
+                <img class="img-fluid-team" src="assets/img/team/9.JPG" alt="" style="height: 450px"; object-fit: cover;>
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
@@ -501,8 +501,8 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Bhaskar Pal</a></h3>
-                <p>Club Marketing Lead, Co-Founder</p>
+                <h3><a href="#">Mohammed Rehan Tadpatri</a></h3>
+                <p>Security Team</p>
               </div>
             </div>
             <!-- Team Item Ends -->
@@ -512,7 +512,7 @@
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="0.6s">
               <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/team.png" alt="" style="height: 450px"; object-fit: cover;>
+                <img class="img-fluid-team" src="assets/img/team/6.jpg" alt="" style="height: 450px"; object-fit: cover;>
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
@@ -525,8 +525,8 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Bhaskar Pal</a></h3>
-                <p>Lead Designer, TNW</p>
+                <h3><a href="#">M.SHARAD CHANDRA</a></h3>
+                <p>Security Team</p>
               </div>
             </div>
             <!-- Team Item Ends -->
@@ -536,7 +536,7 @@
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="0.8s">
               <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/team.png" alt="" style="height: 450px"; object-fit: cover;>
+                <img class="img-fluid-team" src="assets/img/team/3.jpg" alt="" object-fit: cover;>
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
@@ -549,8 +549,8 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Bhaskar Pal</a></h3>
-                <p>Back-end Developer, ASUS</p>
+                <h3><a href="#">Akhil T</a></h3>
+                <p>Security Team</p>
               </div>
             </div>
             <!-- Team Item Ends -->
@@ -559,7 +559,7 @@
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="1s">
               <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/team.png" alt="" style="height: 450px"; object-fit: cover;>
+                <img class="img-fluid-team" src="assets/img/team/2.jpg" alt="" style="height: 450px"; object-fit: cover;>
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
@@ -572,8 +572,8 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Bhaskar Pal</a></h3>
-                <p>Full-stack Developer, Google</p>
+                <h3><a href="#">EDWIN THOMAS</a></h3>
+                <p>Security Team</p>
               </div>
             </div>
             <!-- Team Item Ends -->
@@ -582,7 +582,99 @@
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="1.2s">
               <div class="team-img">
-                <img class="img-fluid" src="assets/img/team/team.png" alt="" style="height: 450px"; object-fit: cover;>
+                <img class="img-fluid-team" src="assets/img/team/4.jpg" alt="" style="height: 450px"; object-fit: cover;>
+                <div class="team-overlay">
+                  <div class="overlay-social-icon text-center">
+                    <ul class="social-icons">
+                      <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-behance" aria-hidden="true"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="info-text">
+                <h3><a href="#">Renish D'souza</a></h3>
+                <p>Security Team</p>
+              </div>
+            </div>
+            <!-- Team Item Ends -->
+          </div>
+          <div class="col-sm-6 col-md-6 col-lg-4">
+            <!-- Team Item Starts -->
+            <div class="team-item wow fadeInUp" data-wow-delay="1.2s">
+              <div class="team-img">
+                <img class="img-fluid-team" src="assets/img/team/5.jpg" alt="" style="height: 450px"; object-fit: cover;>
+                <div class="team-overlay">
+                  <div class="overlay-social-icon text-center">
+                    <ul class="social-icons">
+                      <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-behance" aria-hidden="true"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="info-text">
+                <h3><a href="#">Arun Krishna</a></h3>
+                <p>Security Team</p>
+              </div>
+            </div>
+            <!-- Team Item Ends -->
+          </div>
+          <div class="col-sm-6 col-md-6 col-lg-4">
+            <!-- Team Item Starts -->
+            <div class="team-item wow fadeInUp" data-wow-delay="1.2s">
+              <div class="team-img">
+                <img class="img-fluid-team" src="assets/img/team/8.jpeg" alt="" style="height: 450px"; object-fit: cover;>
+                <div class="team-overlay">
+                  <div class="overlay-social-icon text-center">
+                    <ul class="social-icons">
+                      <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-behance" aria-hidden="true"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="info-text">
+                <h3><a href="#">Aashik Sandeep</a></h3>
+                <p>Marketting Team</p>
+              </div>
+            </div>
+            <!-- Team Item Ends -->
+          </div>
+          <div class="col-sm-6 col-md-6 col-lg-4">
+            <!-- Team Item Starts -->
+            <div class="team-item wow fadeInUp" data-wow-delay="1.2s">
+              <div class="team-img">
+                <img class="img-fluid-team" src="assets/img/team/7.jpg" alt="" style="height: 450px"; object-fit: cover;>
+                <div class="team-overlay">
+                  <div class="overlay-social-icon text-center">
+                    <ul class="social-icons">
+                      <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-behance" aria-hidden="true"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="info-text">
+                <h3><a href="#">Liya J</a></h3>
+                <p>UI Designer Team</p>
+              </div>
+            </div>
+            <!-- Team Item Ends -->
+          <!-- </div>
+          <div class="col-sm-6 col-md-6 col-lg-4">
+      
+            <div class="team-item wow fadeInUp" data-wow-delay="1.2s">
+              <div class="team-img">
+                <img class="img-fluid-team" src="assets/img/team/8.jpeg" alt="" style="height: 450px"; object-fit: cover;>
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
@@ -598,11 +690,34 @@
                 <h3><a href="#">Bhaskar Pal</a></h3>
                 <p>UI Designer, Apple</p>
               </div>
-            </div>
+            </div> -->
+            <!-- Team Item Ends -->
+          <!-- </div>
+          <div class="col-sm-6 col-md-6 col-lg-4"> -->
+            <!-- Team Item Starts -->
+            <!-- <div class="team-item wow fadeInUp" data-wow-delay="1.2s">
+              <div class="team-img">
+                <img class="img-fluid-team" src="assets/img/team/9.JPG" alt="" style="height: 450px"; object-fit: cover;>
+                <div class="team-overlay">
+                  <div class="overlay-social-icon text-center">
+                    <ul class="social-icons">
+                      <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-behance" aria-hidden="true"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="info-text">
+                <h3><a href="#">Bhaskar Pal</a></h3>
+                <p>UI Designer, Apple</p>
+              </div>
+            </div> -->
             <!-- Team Item Ends -->
           </div>
         </div>
-        <a href="speakers.html" class="btn btn-common mt-30 wow fadeInUp" data-wow-delay="1.9s">All Speakers</a>
+        <a href="#" class="btn btn-common mt-30 wow fadeInUp" data-wow-delay="1.9s">Whole Team</a>
       </div>
     </section>
     <!-- Team Section End -->
@@ -1126,7 +1241,7 @@
         <div class="row">
           <div class="col-md-6 col-lg-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay="0.2s">
             <!-- <h3><img src="assets/img/logo.png" alt=""></h3> -->
-            <h3><a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" alt=""></a></h3>
+            <h3><a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" alt="" style="background-color: #FFFFFF;"></a></h3>
             <p>
               Empowering the future of cybersecurity.
             </p>
