--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="1s">
               <div class="team-img">
-                <img class="img-fluid-team" src="assets/img/team/2.jpg" alt="" style="height: 450px"; object-fit: cover;>
+                <img class="img-fluid-team" src="assets/img/team/2.JPG" alt="" style="height: 450px"; object-fit: cover;>
                 <div class="team-overlay">
                   <div class="overlay-social-icon text-center">
                     <ul class="social-icons">
