--- a/index.html
+++ b/index.html
@@ -1241,7 +1241,7 @@
         <div class="row">
           <div class="col-md-6 col-lg-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay="0.2s">
             <!-- <h3><img src="assets/img/logo.png" alt=""></h3> -->
-            <h3><a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" alt="" style="background-color: #FFFFFF;"></a></h3>
+            <h3><a href="index.html" class="navbar-brand"><img src="assets/img/csc-logo-white.png" alt=""></a></h3>
             <p>
               Empowering the future of cybersecurity.
             </p>
