--- a/index.html
+++ b/index.html
@@ -486,6 +486,29 @@
           </div>
           <div class="col-sm-6 col-md-6 col-lg-4">
             <!-- Team Item Starts -->
+            <div class="team-item wow fadeInUp" data-wow-delay="1.2s">
+              <div class="team-img">
+                <img class="img-fluid-team" src="assets/img/team/shraddha.jpeg" alt="" style="height: 450px"; object-fit: cover;>
+                <div class="team-overlay">
+                  <div class="overlay-social-icon text-center">
+                    <ul class="social-icons">
+                      <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
+                      <li><a href="#"><i class="lni-behance" aria-hidden="true"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="info-text">
+                <h3><a href="#">Shraddha Yelamarthy</a></h3>
+                <p>Senior Lead</p>
+              </div>
+            </div>
+            <!-- Team Item Ends -->
+          </div>
+          <div class="col-sm-6 col-md-6 col-lg-4">
+            <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="0.4s">
               <div class="team-img">
                 <img class="img-fluid-team" src="assets/img/team/9.JPG" alt="" style="height: 450px"; object-fit: cover;>
