added conclave photos

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
           </div>
           <div class="col-sm-6 col-md-6 col-lg-4">
             <!-- Team Item Starts -->
-            <div class="team-item wow fadeInUp" data-wow-delay="0.4s">
+            <div class="team-item wow fadeInUp" data-wow-delay="0.2s">
               <div class="team-img">
                 <img class="img-fluid-team" src="assets/img/team/9.JPG" alt="" style="height: 450px"; object-fit: cover;>
                 <div class="team-overlay">
@@ -530,7 +530,6 @@
             </div>
             <!-- Team Item Ends -->
           </div>
-
           <div class="col-sm-6 col-md-6 col-lg-4 team-member hidden">
             <!-- Team Item Starts -->
             <div class="team-item wow fadeInUp" data-wow-delay="0.1s">
@@ -603,7 +602,7 @@
           </div>
           <div class="col-sm-6 col-md-6 col-lg-4 team-member hidden">
             <!-- Team Item Starts -->
-            <div class="team-item wow fadeInUp" data-wow-delay="0.2s">
+            <div class="team-item wow fadeInUp" data-wow-delay="0.4s">
               <div class="team-img">
                 <img class="img-fluid-team" src="assets/img/team/4.jpg" alt="" style="height: 450px"; object-fit: cover;>
                 <div class="team-overlay">
@@ -792,7 +791,7 @@
                 <img class="img-fluid" src="assets/img/gallery/4.jpeg" alt="" style="width: 400px; height: 235px"; object-fit: cover;>
               </div>
               <div class="overlay-box text-center">
-                <a class="lightbox" href="assets/img/gallery/4.jpge" style="width: 400px; height: 235px"; object-fit: cover;>
+                <a class="lightbox" href="assets/img/gallery/4.jpg" style="width: 400px; height: 235px"; object-fit: cover;>
                   <i class="lni-plus"></i>
                 </a>
               </div>
@@ -817,6 +816,79 @@
               </div>
               <div class="overlay-box text-center">
                 <a class="lightbox" href="assets/img/gallery/6.jpeg" style="width: 400px; height: 235px"; object-fit: cover;>
+                  <i class="lni-plus"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-md-6 col-sm-6 col-lg-4">
+            <div class="gallery-box">
+              <div class="img-thumb">
+                <img class="img-fluid" src="assets/img/conclave/DSC_0018.JPG" alt="" style="width: 400px; height: 235px"; object-fit: cover;>
+              </div>
+              <div class="overlay-box text-center">
+                <a class="lightbox" href="assets/img/conclave/DSC_0018.JPG" style="width: 400px; height: 235px"; object-fit: cover;>
+                  <i class="lni-plus"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="ccol-md-6 col-sm-6 col-lg-4">
+            <div class="gallery-box">
+              <div class="img-thumb">
+                <img class="img-fluid" src="assets/img/conclave/DSC_0052.JPG" alt="" style="width: 400px; height: 235px"; object-fit: cover;>
+              </div>
+              <div class="overlay-box text-center">
+                <a class="lightbox" href="assets/img/conclave/DSC_0052.JPG" style="width: 400px; height: 235px"; object-fit: cover;>
+                  <i class="lni-plus"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="ccol-md-6 col-sm-6 col-lg-4">
+            <div class="gallery-box">
+              <div class="img-thumb">
+                <img class="img-fluid" src="assets/img/conclave/DSC_0063.jpeg" alt="" style="width: 400px; height: 235px"; object-fit: cover;>
+              </div>
+              <div class="overlay-box text-center">
+                <a class="lightbox" href="assets/img/conclave/DSC_0063.jpeg" style="width: 400px; height: 235px"; object-fit: cover;>
+                  <i class="lni-plus"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="ccol-md-6 col-sm-6 col-lg-4">
+            <div class="gallery-box">
+              <div class="img-thumb">
+                <img class="img-fluid" src="assets/img/conclave/DSC_0068.JPG" alt="" style="width: 400px; height: 235px"; object-fit: cover;>
+              </div>
+              <div class="overlay-box text-center">
+                <a class="lightbox" href="assets/img/conclave/DSC_0068.JPG" style="width: 400px; height: 235px"; object-fit: cover;>
+                  <i class="lni-plus"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="ccol-md-6 col-sm-6 col-lg-4">
+            <div class="gallery-box">
+              <div class="img-thumb">
+--" style="width: 400px; height: 235px"; object-fit: cover;>G" alt="" style="width: 400px; height: 235px"; object-fit: cover;>
+              </div>
+              <div class="overlay-box text-center">
+                <a class="lightbox" href="assets/img/conclave/DSC_0087.JPG" style="width: 400px; height: 235px"; object-fit: cover;>
+                  <i class="lni-plus"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="ccol-md-6 col-sm-6 col-lg-4">
+            <div class="gallery-box">
+              <div class="img-thumb">
+                <img class="img-fluid" src="assets/img/conclave/DSC_0097.JPG" alt="" style="width: 400px; height: 235px"; object-fit: cover;>
+              </div>
+              <div class="overlay-box text-center">
+                <a class="lightbox" href="assets/img/conclave/DSC_0097.JPG" style="width: 400px; height: 235px"; object-fit: cover;>
                   <i class="lni-plus"></i>
                 </a>
               </div>
